Interim checkin; added CDI extension
Signed-off-by: Laird Nelson <ljnelson@gmail.com>